cluster/apps/authentication/authelia/authelia-middleware.yaml
# authelia-middleware

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia-middleware
  namespace: authentication
spec:
  forwardAuth:
    address: http://authentication-authelia.authentication.svc.cluster.local/api/verify?rd=https://auth.${SECRET_DOMAIN}
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
