cluster/apps/authentication/authelia/authelia-ingressroute.yaml
# authelia-http-ingressroute
# authelia-https-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-http-ingressroute
  namespace: authentication
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: authentication-authelia
          port: 9091

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: secure-headers-middleware
          namespace: traefik
      services:
        - name: authentication-authelia
          namespace: authentication
          port: 9091
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
