cluster/apps/authentication/authelia/authelia-ingressroutes.yaml
# authelia-https-ingressroute
# authelia-middleware

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      services:
        - name: authentication-authelia
          namespace: authentication
          port: 9091
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia-middleware
  namespace: authentication
spec:
  forwardAuth:
    address: http://authentication-authelia.authentication.svc.cluster.local:9091/api/verify?rd=https://auth.${SECRET_DIGITALOCEAN_DOMAIN_02}
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
